--- a/index.html
+++ b/index.html
@@ -142,6 +142,27 @@
           </section>
 				</section>
 
+				<section>
+          <section data-background="#004562">
+            <h1>Service Discovery</h1>
+          </section>
+				</section>
+
+        <section>
+          <section data-background="#004562">
+          <h2>Which one?</h2>
+          <ul>
+            <span class="fragment"><li>zookeeper</li></span>
+            <span class="fragment"><li>mesos-dns</li></span>
+            <span class="fragment"><li>mesos haproxy</li></span>
+            <span class="fragment"><li>serf</li></span>
+            <span class="fragment"><li>consul</li></span>
+            <span class="fragment"><li>etcd</li></span>
+            <span class="fragment"><li>nerve & synapse</li></span>
+          </ul>
+          </section>
+        </section>
+
 			</div>
 
 		</div>
